[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "rtsp-sdk"
version = "10.0.0"
description = "RTSP SDK with Python bindings"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/yourusername/rtsp"
Documentation = "https://yourusername.github.io/rtsp"
Repository = "https://github.com/yourusername/rtsp"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtsp*"]

[tool.setuptools.package-data]
rtsp = ["*.so", "*.pyd", "*.dll"]
